--- a/web/index.html
+++ b/web/index.html
@@ -75,9 +75,9 @@
 		<div class="layui-row" style="text-align: center; color:#666; margin-top: 120px;">
 			<p class="ff-en"  style="font-size: 90px;">
 				<span><span class="tc-primary">E</span>vent<span class="tc-primary">D</span>B</span>
-				<i class="layui-icon" style="color:#666; font-size: 90px;">&#xe62e;</i>
+				<i class="layui-icon logo-animation" style="color:#666; font-size: 90px; position: absolute;">&#xe62e;</i>
 			</p>
-			<p style="font-size: 16px; margin-top: -20px; text-indent: -13px;" class="tc-primary">面向高能物理的大数据管理系统</p>
+			<p style="font-size: 16px; margin-top: -20px; text-indent: 90px;" class="tc-primary">面向高能物理的大数据管理系统</p>
 		</div>
 		<div style="height: 30px;"></div>
 		<div class="layui-row">
