--- a/web/index.html
+++ b/web/index.html
@@ -42,14 +42,14 @@
 				<input type="text" placeholder="搜索数据表或run号" value="" class="layui-input">
 			</form>
 			<ul class="layui-nav" lay-filter="">
-				<li class="layui-nav-item layui-this">
-					<a href="">首页</a>
+				<li class="layui-nav-item">
+					<a href="index.html">首页</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="">查看RUN</a>
+					<a href="viewrun.html">查看RUN</a>
 				</li>
-				<li class="layui-nav-item">
-					<a href="">查询历史</a>
+				<li class="layui-nav-item  layui-this">
+					<a href="queryHistory.html">查询历史</a>
 				</li>
 				<li class="layui-nav-item">
 					<a href="javascript:;">项目介绍</a>
