--- a/web/rundetail.html
+++ b/web/rundetail.html
@@ -109,13 +109,13 @@
 			</form>
 			<ul class="layui-nav" lay-filter="">
 				<li class="layui-nav-item">
-					<a href="">首页</a>
-				</li>
-				<li class="layui-nav-item layui-this">
-					<a href="">查看RUN</a>
+					<a href="index.html">首页</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="">查询历史</a>
+					<a href="viewrun.html">查看RUN</a>
+				</li>
+				<li class="layui-nav-item  layui-this">
+					<a href="queryHistory.html">查询历史</a>
 				</li>
 				<li class="layui-nav-item">
 					<a href="javascript:;">项目介绍</a>
